# winq

./: Cargo.toml  LICENSE  README.md
examples/: clock.py  colors.py  input.py
examples/clojure/: deps.edn
examples/clojure/src/: cmn.clj  test1.clj
examples/python/: README.md  _cmn.py  example_1.py  example_2.py  example_3.py  example_json_1.py
src/: aux.rs  comms.rs  config.rs  err.rs  error.rs  event.rs  gui.rs  input.rs  lib.rs  main.rs  mode.rs  msg.rs  opts.rs  state.rs  stdio.rs  transport.rs  utils.rs
src/_old/: client.rs  etc.rs  input.rs  state.rs
src/_old/server/: child.rs  mod.rs
src/comms/: child.rs  json.rs  mod.rs  nng.rs  simple.rs  socket.rs  stdio.rs  tcp.rs
src/comms/simple/: mod.rs  repr.rs
src/config/: color_scheme.rs  fltk_serde_color.rs  fltk_serde_font.rs  fonts.rs  mod.rs
src/format/: json.rs  mod.rs
src/format/simple/: mod.rs  repr.rs
src/frontend/: fltk.rs  mod.rs  tui.rs
src/proto/: json.rs
src/proto/simple/: mod.rs  repr.rs
src/transport/: child.rs  mod.rs  socket.rs  stdio.rs  tcp.rs
