[package]
name = "winq"
version = "1.0.0"
authors = ["Nycta <rawieo@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "winq"
path = "src/lib.rs"

[[bin]]
name = "winq"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
dirs = "4.0.0"
fltk = { version = "1.2.27" }
log = "0.4.14"
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"
simplelog = "0.11.2"
unicode-segmentation = "1.8.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

